# micce

./: README.md  index.pickle  index.py  micce.ipynb  pyproject.toml
micce/: index.pickle  index.py  main.py
micce/data/: data.json  embetting_res_dummy.json
